welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:19: error: ')' expected but 'for' found.
  for (i <- 1 to h-1) {
  ^